# echo-SRE

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
config/: providers.example.yaml
scenarios/: checkout_latency.json
src/echo_sre/: __init__.py  cli.py  config.py  tools.py
src/echo_sre/agent/: __init__.py  loop.py  prompts.py
src/echo_sre/api/: __init__.py  app.py
src/echo_sre/inference/: __init__.py  budget.py  gateway.py  metrics.py  mock.py  provider.py  types.py
src/echo_sre/mcp_server/: __init__.py  server.py
src/echo_sre/observability/: __init__.py  base.py  factory.py  prometheus.py  synthetic.py
src/echo_sre/rag/: __init__.py  runbooks.py
src/echo_sre/rag/runbooks/: cache-stampede.md  db-connection-exhaustion.md  error-rate-spike.md  high-latency.md
tests/: test_agent_loop.py  test_api.py  test_budget.py  test_gateway_fallback.py  test_provider.py
