[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "echo-sre"
version = "0.1.0"
description = "ECHO-SRE — an agentic SRE/observability copilot over MCP with a provider-agnostic inference gateway (local vLLM or any OpenAI-compatible API, with automatic fallback)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Sharon Dev Saseendran" }]
keywords = ["mcp", "agent", "sre", "observability", "llm", "vllm", "openai", "fallback"]

dependencies = [
    "mcp>=1.2",
    "openai>=1.40",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6",
    "httpx>=0.27",
    "prometheus-client>=0.20",
    "typer>=0.12",
    "rich>=13",
    "rank-bm25>=0.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "httpx>=0.27",
]

[project.scripts]
echo-sre = "echo_sre.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/echo_sre"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
